# Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
include/tracer/: aabb.h  bvh.h  camera.h  canvas.h  emission_profile.h  material.h  mesh.h  object.h  octree.h  rng.h  sampler.h  scene.h  texture.h  tracer.h
src/: CMakeLists.txt  aabb.h  bvh.h  canvas.cpp  json_helper.h  material.cpp  mesh.cpp  object.cpp  sampler.cpp  scene.cpp  texture.cpp  thread_pool.h  tracer.cpp  util.h
test/: CMakeLists.txt  main.cpp
